# axonize

./: .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  tsconfig.main.json  tsconfig.node.json  tsconfig.renderer.json  tsconfig.tsbuildinfo  tsconfig.web.json  vitest.config.ts
desktop/main/: main.ts  preload.ts
desktop/main/semantic/: command.ts  engine.ts  graph.ts  integrity.ts  markdown.ts  models.ts  normalization.ts  storage.ts
desktop/renderer/: index.html  renderer.ts  styles.css  types.d.ts
doc/: Reading_App_Evidence_Based_Design_Guidelines_v2.md
docs/: module-a.md  module-b.md
scripts/: control-workspace.cjs  copy-static.cjs  debug-workspace.cjs  open-workspace.cjs  patch-electron-name.sh
src/axonize/: __init__.py  cli.py  commands.py  engine.py  graph.py  integrity.py  markdown_ast.py  models.py  normalization.py  storage.py
src/main/: file-service.ts  file-watcher.ts  generated-docs-ipc-handlers.ts  generated-docs-service.ts  index.ts  ipc-handlers.ts  logger.ts  rag-ipc-handlers.ts  recent-vaults-service.ts  semantic-ipc-handlers.ts  settings-service.ts  window-state.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html  main.tsx
tests/: test_engine.py  test_markdown_ast.py  test_normalization.py
tests/e2e/: app-launch.spec.ts  electron.spec.ts  file-tree.spec.ts  graph-view.spec.ts  markdown-view.spec.ts  recent-vaults.spec.ts  screenshot.spec.ts  vault-open.spec.ts  zoom-levels.spec.ts
tests/fixtures/: sample.md
(+103 files in other folders)
